# apophysis-cpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: CopyMatching.cmake  Packaging.cmake
docs/: BUILD_INSTRUCTIONS.md  FOLLOWUP_PLAN.txt  MAKE_PORTABLE_PLAN.txt  MISSING_FEATURES_PLAN.txt  OPTIMIZATION_STATUS.md  USAGE.md
packaging/: apophysis7x.iss
scripts/: generate_builtin_gradients.py
src/core/: Bezier.cpp  Bezier.h  BuiltinGradients.cpp  BuiltinGradients.h  CMakeLists.txt  ColorMap.cpp  ColorMap.h  Flame.cpp  Flame.h  Point3.h  Rng.h  Variation.h  VariationRegistration.h  VariationRegistry.cpp  VariationRegistry.h  XForm.cpp  XForm.h
src/core/edit/: FlameOps.cpp  FlameOps.h  GradientOps.cpp  GradientOps.h  MutationOps.cpp  MutationOps.h  RandomFlame.cpp  RandomFlame.h  SmoothPalette.cpp  SmoothPalette.h  Symmetry.cpp  Symmetry.h  TriangleGeometry.cpp  TriangleGeometry.h
src/core/io/: FlameIO.cpp  FlameIO.h  GradientIO.cpp  GradientIO.h  ImageCompare.cpp  ImageCompare.h  PngWriter.cpp  PngWriter.h
src/core/plugins/: PluginVariation.cpp  PluginVariation.h
src/core/render/: AutoFrame.cpp  AutoFrame.h  Renderer.cpp  Renderer.h
src/core/variations/: VarAuger.cpp  VarAuger.h  VarBipolar.cpp  VarBipolar.h  VarBlurCircle.cpp  VarBlurCircle.h  VarBlurPixelize.cpp  VarBlurPixelize.h  VarBlurZoom.cpp  VarBlurZoom.h  VarBwraps.cpp  VarBwraps.h  VarCrop.cpp  VarCrop.h  VarCross.cpp  VarCross.h  VarCurl.cpp  VarCurl.h  VarCurl3D.cpp  VarCurl3D.h  VarElliptic.cpp  VarElliptic.h  VarEpispiral.cpp  VarEpispiral.h  VarEscher.cpp  VarEscher.h  VarFalloff2.cpp  VarFalloff2.h  VarFan2.cpp  VarFan2.h  VarFoci.cpp  VarFoci.h  VarHemisphere.cpp  VarHemisphere.h  VarJulia3Djf.cpp  VarJulia3Djf.h  VarJulia3Dz.cpp  VarJulia3Dz.h  VarJuliaScope.cpp  VarJuliaScope.h  (+54 more)
src/tools/: CMakeLists.txt  apo_bench.cpp  apo_render_cli.cpp
src/ui/: AboutDialog.cpp  AboutDialog.h  AdjustDialog.cpp  AdjustDialog.h  AppSettings.cpp  AppSettings.h  CMakeLists.txt  CurvesDialog.cpp  CurvesDialog.h  CurvesWidget.cpp  CurvesWidget.h  EditorWindow.cpp  EditorWindow.h  FileDialogSupport.h  ForceSymmetryDialog.cpp  ForceSymmetryDialog.h  FullscreenView.cpp  FullscreenView.h  GradientBrowserDialog.cpp  GradientBrowserDialog.h  MainWindow.cpp  MainWindow.h  MemoryBudget.cpp  MemoryBudget.h  MutateDialog.cpp  MutateDialog.h  OptionsDialog.cpp  OptionsDialog.h  PostProcessDialog.cpp  PostProcessDialog.h  PreviewLabel.cpp  PreviewLabel.h  RenderAllDialog.cpp  RenderAllDialog.h  RenderDialog.cpp  RenderDialog.h  RenderWorker.h  SliderSpin.cpp  SliderSpin.h  SmoothPaletteDialog.cpp  (+9 more)
src/ui/resources/: app.rc
tests/: CMakeLists.txt  TestHelpers.h  all_plugins_smoke_test.cpp  auto_frame_test.cpp  baseline_regression_test.cpp  bezier_test.cpp  builtin_gradients_test.cpp  core_smoke_test.cpp  flame_clone_test.cpp  flame_io_test.cpp  flame_ops_test.cpp  gradient_io_test.cpp  gradient_ops_test.cpp  main_window_save_all_test_input.flame  mutation_ops_test.cpp  plugin_variations_test.cpp  png_writer_test.cpp  random_flame_test.cpp  renderer_test.cpp  smooth_palette_test.cpp  symmetry_test.cpp  triangle_geometry_test.cpp  variation_roundtrip_test.cpp  variations_batch1_test.cpp  variations_batch2_test.cpp  variations_batch3_test.cpp  variations_batch4_test.cpp  variations_batch5_test.cpp  variations_batch6_test.cpp
tests/baselines/: camera_3d.flame  final_xform.flame  simple_sierpinski.flame  swirl_spherical.flame  xaos_blend.flame
tests/ui/: CMakeLists.txt  adjust_dialog_interaction_test.cpp  curves_dialog_interaction_test.cpp  force_symmetry_dialog_interaction_test.cpp  fullscreen_view_interaction_test.cpp  gradient_browser_dialog_interaction_test.cpp  main_window_interaction_test.cpp  memory_budget_test.cpp  mutate_dialog_interaction_test.cpp  options_dialog_interaction_test.cpp  postprocess_dialog_interaction_test.cpp  preview_label_interaction_test.cpp  render_all_dialog_interaction_test.cpp  render_dialog_interaction_test.cpp  smooth_palette_dialog_interaction_test.cpp  transform_panel_interaction_test.cpp  triangle_canvas_interaction_test.cpp  xaos_dialog_interaction_test.cpp
